--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "ghosttify"
 version = "0.1.0"
-edition = "2021"
+authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
+edition = "2024"
+readme = "README.md"
+repository = "https://github.com/natibek/ghosttify"
+license = "Apache 2.0"
 
 [dependencies]
+rust-ini = "0.21.1"
+dirs = "6.0.0"
+colored = "3.0.0"
