--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ghosttify"
 version = "0.1.0"
 authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
-edition = "2024"
+edition = "2021"
 readme = "README.md"
 repository = "https://github.com/natibek/ghosttify"
 license = "Apache 2.0"
@@ -13,3 +13,4 @@ dirs = "6.0.0"
 colored = "3.0.0"
 serde_json = "1.0.140"
 regex = "1.11.1"
+clap = {version = "4.5.31", features = ["derive"]}
