--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "ghosttify"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
 edition = "2021"
 readme = "README.md"
 repository = "https://github.com/natibek/ghosttify"
+description = "Rust CLI tool for converting gnome-terimal shortcuts to ghostty keybindings."
 license = "Apache 2.0"
 
 [dependencies]
